--- a/index.html
+++ b/index.html
@@ -48,6 +48,28 @@
                 <input type="text" placeholder="Add a book..." />
                 <button>Add</button>
             </form>
+            <div id="tabbed-content">
+                <ul class="tabs">
+                    <li data-beans="#about" class="active">About</li>
+                    <li data-beans="#contact">Contact</li>
+                </ul>
+                <div class="panel active" id="about">
+                    <p>Content for about tab...</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Vestibulum id nunc porta urna ornare rhoncus. Ut
+                        convallis ante at.
+                    </p>
+                </div>
+                <div class="panel" id="contact">
+                    <p>Content for contact tab...</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Vestibulum id nunc porta urna ornare rhoncus. Ut
+                        convallis ante at.
+                    </p>
+                </div>
+            </div>
         </div>
 
         <script src="app.js"></script>
